Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-5582

Docs: Fix .NET API docs errors: CacheFactory

    XMLWordPrintableJSON

Details

    Description

      The comments (and presumably the generated docs) for CacheFactory.hpp have a couple errors.

      • CacheFactory.CreateCacheFactory should be CacheFactory.Create
      • CacheFactory.GetInstance should be Cache.GetInstance

      Attachments

        Issue Links

          Activity

            People

              dbarnes Dave Barnes
              dbarnes Dave Barnes
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m