GEODE-5582: Fix .NET API docs errors (CacheFactory.hpp)